syntax = "proto3";

option csharp_namespace = "VehicleTracker";

package tracker;

service TrackerService {
  rpc CreateVehicle (VehicleMessage) returns (CreateVehicleReply);
  rpc GetVehicles (QueryRequest) returns (AllVehiclesReply);
  rpc DeleteVehicle (VehicleMessage) returns (DeleteVehicleReply);
  rpc AddMovement(VehicleMovementMessage) returns (CreateVehicleMovementReply);
}

message VehicleMessage {
  string Id=1;
  string registration = 2;
  string vehicleType=3;
}

message CreateVehicleReply {
  bool creationSuccess = 1;
  VehicleMessage vehicle=2;
}

message VehicleMovementMessage {
	string Id=1;
	VehicleMessage vehicle=2;
	string actionType=3;
	string actionTime=4;
}

message CreateVehicleMovementReply {
	bool creationSuccess = 1;
}

message QueryRequest{
	string vehicleType=1;
}

message AllVehiclesReply{
	repeated VehicleMessage vehicles=1;
}

message DeleteVehicleReply {
	bool deletionSuccess = 1;
}